[gd_scene load_steps=3 format=2]

[ext_resource path="res://Multimedia/Iconos/key.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Globales/KeyCanvas.gd" type="Script" id=2]

[node name="KeyCanvas" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Door1" type="Sprite" parent="."]
visible = false
position = Vector2( 1119, 31 )
scale = Vector2( 1.5, 2.09259 )
texture = ExtResource( 1 )

[node name="Door2" type="Sprite" parent="."]
visible = false
position = Vector2( 1065, 31 )
scale = Vector2( 1.5, 2.093 )
texture = ExtResource( 1 )

[node name="Door3" type="Sprite" parent="."]
visible = false
position = Vector2( 1011, 31 )
scale = Vector2( 1.5, 2.093 )
texture = ExtResource( 1 )

[node name="Door4" type="Sprite" parent="."]
visible = false
position = Vector2( 1119, 32 )
scale = Vector2( 1.5, 2.093 )
texture = ExtResource( 1 )

[node name="Door5" type="Sprite" parent="."]
visible = false
position = Vector2( 1119, 31 )
scale = Vector2( 1.5, 2.093 )
texture = ExtResource( 1 )

[node name="Door6" type="Sprite" parent="."]
visible = false
position = Vector2( 1066, 31 )
scale = Vector2( 1.5, 2.093 )
texture = ExtResource( 1 )

[node name="Door7" type="Sprite" parent="."]
visible = false
position = Vector2( 1011, 31 )
scale = Vector2( 1.5, 2.093 )
texture = ExtResource( 1 )

[node name="Door8" type="Sprite" parent="."]
visible = false
position = Vector2( 1119, 32 )
scale = Vector2( 1.5, 2.093 )
texture = ExtResource( 1 )

[node name="Door9" type="Sprite" parent="."]
visible = false
position = Vector2( 1119, 31 )
scale = Vector2( 1.5, 2.093 )
texture = ExtResource( 1 )

[node name="Door10" type="Sprite" parent="."]
visible = false
position = Vector2( 1065, 31 )
scale = Vector2( 1.5, 2.093 )
texture = ExtResource( 1 )
